Bug 715710 - [New Tab Page] Black bars behind titles should be lowered in opacity from 80% to 50%

--- a/browser/themes/gnomestripe/newtab/newTab.css
+++ b/browser/themes/gnomestripe/newtab/newTab.css
@@ -99,7 +99,7 @@
   height: 2.4em;
   width: 189px;
   padding: 0 6px;
-  background-color: rgba(0,0,0,0.8);
+  background-color: rgba(0,0,0,0.5);
   border: solid transparent;
   border-width: 6px 0;
   color: #fff;
